--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,3 +10,7 @@ a {
   a:hover {
       color: grey;
   }
+
+body {
+  background-image:url(http://www.hdwallpapers.in/walls/windows_xp_bliss-wide.jpg);
+}
