--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,3 +14,5 @@ a {
 body {
   background-image:url(http://www.hdwallpapers.in/walls/windows_xp_bliss-wide.jpg);
 }
+
+h1 { font-family: 'Indie Flower', cursive;}
