--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,4 +15,4 @@ body {
   background-image:url(http://www.hdwallpapers.in/walls/windows_xp_bliss-wide.jpg);
 }
 
-h1 { font-family: 'Indie Flower', cursive;}
+h1 { font-family: 'Indie Flower', cursive; font-size: 150%;}
