--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,4 +17,4 @@ body {
 
 h1 { font-family: 'Indie Flower', cursive; font-size: 45px}
 
-p{ font-family: 'Play', sans-serif;}
+p{ font-family: 'Play', sans-serif; font-size: 30px}
