--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ a {
   }
 
 body {
-  background-image:url(http://www.hdwallpapers.in/walls/windows_xp_bliss-wide.jpg);
+  background-image:url(http://www.planwallpaper.com/static/images/6909249-black-hd-background.jpg);
 }
 
 h1 { font-family: 'Indie Flower', cursive; font-size: 45px}
