--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ a {
   }
 
 body {
-  background-image:url(http://www.planwallpaper.com/static/images/6909249-black-hd-background.jpg);
+  background-image:url(http://onlybackground.com/wp-content/uploads/2013/12/Tumblr-Guy-Backgrounds-7.jpg);
 }
 
 h1 { font-family: 'Indie Flower', cursive; font-size: 45px; color:#3399ff}
