--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ a {
   }
 
 body {
-  background-image:url(http://onlybackground.com/wp-content/uploads/2013/12/Tumblr-Guy-Backgrounds-7.jpg);
+  background-image:url(http://thesmashable.com/wp-content/uploads/2013/05/free-hd-despicable-me-2-wallpapers-desktop-backgrounds-despicable-me2-hd-desktop-wallpapers-despicable-me2-movie-wallpapers-despicable-me-wallpapers14.jpg);
 }
 
 h1 { font-family: 'Indie Flower', cursive; font-size: 45px; color:#3399ff}
