--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ a {
   }
 
 body {
-  background-image:url(http://hdwyn.com/wallpaper_gray/gray_solid_color_bright_lines_hd-wallpaper-18056.jpg);
+  background-image:url(http://4.bp.blogspot.com/-KBeAk02A_vA/Tm-gCQwRd3I/AAAAAAAAEwc/eqqgLcXiFho/s1600/black+backgrounds+for+desktop+3.jpeg);
 }
 
 h1 { font-family: 'Indie Flower', cursive; font-size: 45px; color:#3399ff}
