--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ a {
   }
 
 body {
-  background-image:url(http://4.bp.blogspot.com/-KBeAk02A_vA/Tm-gCQwRd3I/AAAAAAAAEwc/eqqgLcXiFho/s1600/black+backgrounds+for+desktop+3.jpeg);
+  background-image:url(http://hdwallpapers-download.com/wp-content/uploads/2014/10/Grey-Wallpaper-02.jpg);
 }
 
 h1 { font-family: 'Indie Flower', cursive; font-size: 45px; color:#3399ff}
