--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,6 @@ body {
   background-image:url(http://hdwallpapers-download.com/wp-content/uploads/2014/10/Grey-Wallpaper-02.jpg);
 }
 
-h1 { font-family: 'Indie Flower', cursive; font-size: 45px; color:#0000ff}
+h1 { font-family: 'Indie Flower', cursive; font-size: 45px; color:#1a1aff}
 
 p{ font-family: 'Play', sans-serif; font-size: 30px; color: white}
