--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,5 +22,12 @@ p{ font-family: 'Play', sans-serif; font-size: 30px; color: white}
 a:link{
 text-decoration: none;
 
+.navbar {
+
+  display: inline-block;
+  padding: 0;
+  position: absolute;
+}
+
 
 }
